--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "netlify-cms-app": "^2.9.1",
     "pure-react-carousel": "^1.27.0",
     "react": "^16.8.6",
+    "react-animations": "^1.0.0",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.0",
     "react-media": "^1.10.0",
