added header collapsable

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react": "^16.8.6",
     "react-animations": "^1.0.0",
     "react-background-slider": "^2.0.0",
+    "react-collapsible": "^2.8.0",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.0",
     "react-media": "^1.10.0",
