--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-collapsible": "^2.8.0",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.0",
+    "react-image-gallery": "^1.0.7",
     "react-media": "^1.10.0",
     "react-scroll": "^1.7.16",
     "react-switch": "^5.0.0",
