--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "gatsby-remark-vscode": "^1.0.4",
     "gatsby-source-filesystem": "^2.0.29",
     "gatsby-transformer-sharp": "^2.1.18",
+    "google-map-react": "^1.1.7",
     "netlify-cms-app": "^2.9.1",
     "pure-react-carousel": "^1.27.0",
     "react": "^16.8.6",
