--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "google-map-react": "^1.1.7",
     "netlify-cms-app": "^2.9.1",
     "pure-react-carousel": "^1.27.0",
+    "query-string": "^6.13.1",
     "react": "^16.8.6",
     "react-animations": "^1.0.0",
     "react-background-slider": "^2.0.0",
