--- a/package.json
+++ b/package.json
@@ -36,6 +36,9 @@
     "gatsby-transformer-sharp": "^2.1.18",
     "google-map-react": "^1.1.7",
     "netlify-cms-app": "^2.9.1",
+    "pigeon-maps": "^0.15.0",
+    "pigeon-marker": "^0.3.4",
+    "pigeon-overlay": "^0.2.3",
     "pure-react-carousel": "^1.27.0",
     "query-string": "^6.13.1",
     "react": "^16.8.6",
