--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mdx-js/mdx": "^1.5.1",
     "@mdx-js/react": "^1.5.1",
     "babel-plugin-styled-components": "^1.10.0",
+    "bootstrap": "^4.5.0",
     "formik": "^2.1.4",
     "gatsby": "^2.3.25",
     "gatsby-image": "^2.0.39",
@@ -44,6 +45,7 @@
     "react": "^16.8.6",
     "react-animations": "^1.0.0",
     "react-background-slider": "^2.0.0",
+    "react-bootstrap": "^1.2.2",
     "react-collapsible": "^2.8.0",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.0",
