--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -23,6 +23,8 @@ collections:
       - { name: longitud, label: Longitud, widget: number, valueType: 'float' }
       - { name: latitud, label: Latitud, widget: number, valueType: 'float' }
       - { name: price, label: Precio }
+      - {label: "Vendida", name: "soldout", widget: "boolean", default: false}
+      - {label: "Alquilada", name: "rented", widget: "boolean", default: false}
       - { label: "Tipo de Moneda",  name: currency, widget: select, options: ["U$S", "$"]}
       - { name: images, label: Imagenes, widget: list,  field: {label: Imagen, name: image, widget: image} }
       - { label: "Tipo de Propiedad" ,  name: propertyType, widget: select, options: [ { label: "Casa", value: "casas" },{ label: "Apartamentos", value: "apartamentos" }, { label: "Terrenos", value: "terrenos" },  { value: "camposychacras", label: "Campos y Chacras" },{ value: "galponesylocalescomerciales", label: "Galpones y Locales Comerciales" }, { label: "Remates", value: "remates" }] }
